Changed some contents

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ This space showcases some of my best work, technical skills, and projects I’ve
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>A quick overview of my core technical skills that drive my development work.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -345,7 +345,7 @@ This space showcases some of my best work, technical skills, and projects I’ve
                   <img src="assets/img/ecommerce.jpg" class="card-img-top img-fluid project-img" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Emart</h5>
-                    <p class="card-text">E-commerce web app for electronic devices with essential store features, Twilio-powered OTP verification and PayPal integration for payments.
+                    <p class="card-text">Full-featured e-commerce web application with all essential functionalities of a modern online store, Twilio-powered OTP verification and PayPal integration for payments.
                       <br><em>Tech Stack: Python, Django, PostgreSQL, HTML, Bootstrap, Twilio, PayPal, Modal</em></p>
                     <a href="https://github.com/suhailasalam47/Ecommerce" class="btn btn-dark">Github</a>
                   </div>
@@ -398,7 +398,7 @@ This space showcases some of my best work, technical skills, and projects I’ve
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Let’s connect! Open to opportunities, feedback, or a friendly chat.</p>
+        <p>Let’s connect! Open to opportunities, collaboration, or constructive feedback.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
